KQED -/src/objects/WGBH_Accounting_Unit__c.object
<CustomObject>
    <description>List of WGBH Accounting Units without Activities</description>
    <fields>
        <fullName>Accounting_Unit__c</fullName>
        <description>The Accounting Unit</description>
        <externalId>true</externalId>
        <label>Accounting Unit</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the AU</description>
        <label>Description</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is it an active AU</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>WGBH Accounting Unit</label>
    <listViews>
        <fullName>Active_AU</fullName>
        <columns>Accounting_Unit__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active AU</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accounting_Unit__c</columns>
        <columns>Description__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WGBH Accounting Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGBH Accounting Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>